src/objects/CPQ_QuoteContractualDiscount__c.object
<CustomObject>
    <description>De-normalized table to capture the QLD and ICD selected by the sales rep, for a given quote</description>
    <fields>
        <fullName>CPQ_Applied_Discount_For_Templates__c</fullName>
        <formula>CPQ_Applied_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applied Discount For Templates</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Applied_Discount__c</fullName>
        <description>Captures the discount value given using the discount type</description>
        <label>Applied Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Code__c</fullName>
        <description>Reference to the QLD/ICD code for conditional discount</description>
        <formula>CPQ_QLD_ICD_ID__r.CPQ_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Reference to the QLD/ICD code for conditional discount</inlineHelpText>
        <label>Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Contractual_Disc_Method__c</fullName>
        <description>Reference to the QLD/ICD record type for conditional discount</description>
        <formula>CPQ_QLD_ICD_ID__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Reference to the QLD/ICD record type for conditional discount</inlineHelpText>
        <label>Contractual Discount Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Description__c</fullName>
        <description>Reference to the QLD/ICD description for conditional discount</description>
        <formula>CPQ_QLD_ICD_ID__r.CPQ_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Reference to the QLD/ICD description for conditional discount</inlineHelpText>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Discount_Type__c</fullName>
        <description>Reference to the QLD/ICD discount type for conditional discount</description>
        <formula>TEXT(CPQ_QLD_ICD_ID__r.CPQ_Discount_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Reference to the QLD/ICD discount type for conditional discount</inlineHelpText>
        <label>Discount Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Discount_Value__c</fullName>
        <description>Reference to the QLD/ICD discount value for conditional discount</description>
        <formula>CPQ_QLD_ICD_ID__r.CPQ_Discount_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Reference to the QLD/ICD discount value for conditional discount</inlineHelpText>
        <label>Discount Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Name__c</fullName>
        <description>Reference to the Name of QLD/ICD discount</description>
        <formula>CPQ_QLD_ICD_ID__r.CPQ_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Reference to the Name of QLD/ICD discount</inlineHelpText>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Proposal__c</fullName>
        <description>Reference to the quote/proposal record</description>
        <inlineHelpText>Reference to the quote/proposal record</inlineHelpText>
        <label>Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Quote Contractual Discounts</relationshipLabel>
        <relationshipName>Quote_Contractual_Discounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CPQ_QLD_ICD_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the QLD/ICD ID selected by sales rep</description>
        <inlineHelpText>Reference to the QLD/ICD ID selected by sales rep</inlineHelpText>
        <label>QLD/ICD ID</label>
        <referenceTo>CPQ_ContractConditionDisc__c</referenceTo>
        <relationshipLabel>Quote Contractual Discounts</relationshipLabel>
        <relationshipName>Quote_Contractual_Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPQ_Sequence__c</fullName>
        <description>Reference to the sequence number selected by sales rep</description>
        <inlineHelpText>Reference to the sequence number selected by sales rep</inlineHelpText>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Quote Contractual Discount</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SAPNA_Test_VIEW</fullName>
        <columns>NAME</columns>
        <columns>CPQ_Contractual_Disc_Method__c</columns>
        <columns>CPQ_Code__c</columns>
        <columns>CPQ_Discount_Type__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CPQ_Description__c</columns>
        <columns>CPQ_QLD_ICD_ID__c</columns>
        <columns>CPQ_Sequence__c</columns>
        <columns>CPQ_Discount_Value__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>SAPNA - Test VIEW</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>QCD-{00000000}</displayFormat>
        <label>Quote Contract Disc ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Contractual Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>